fixed gap between accomodation cards for desktop view 1440

--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ h1 {
 } */
 .accommodation-cards {
     display: flex;
-    gap: 25px;
+    gap: 20px;
     flex-wrap: wrap;
     justify-content: space-between;
     padding-top: 25px;
